--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/rest_up_logo"
         android:label="REST UP *Food and Drinks*"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/rest_up_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
@@ -20,9 +20,9 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".loginActivity"
+            android:name=".loginActivity" android:theme="@style/SplashTheme"
             android:exported="true"
-            android:label="Login">
+            android:label="RestUp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,5 +34,4 @@
                 android:value="" />
         </activity>
     </application>
-
 </manifest>
