Formulario login mejorado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".MenuPrincipal"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".RegistroActivity"
             android:exported="false">
             <meta-data
@@ -27,9 +34,10 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".loginActivity" android:theme="@style/SplashTheme"
+            android:name=".loginActivity"
             android:exported="true"
-            android:label="RestUp">
+            android:label="RestUp"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,4 +49,5 @@
                 android:value="" />
         </activity>
     </application>
+
 </manifest>
