--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.aply.taller'
+    namespace 'com.aply.proyecto'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.aply.taller"
+        applicationId "com.aply.proyecto"
         minSdk 21
         targetSdk 32
         versionCode 1
