--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,19 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".Editar_menu"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:name=".EditarPromociones"
+            android:exported="false" />
+        <activity
+            android:name=".VistaPromociones"
+            android:exported="false" />
         <activity
             android:name=".VistaMenu"
+            android:exported="false" />
+        <activity
+            android:name=".RegistroPromociones"
+            android:exported="false" />
+        <activity
+            android:name=".Editar_menu"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
